...
                        android:src="@drawable/book_placeholder" />


                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/tvBookTitleDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:layout_toEndOf="@id/mcBooksImage"
                    android:text="Orange Are not Only Fruit"
                    android:textSize="@dimen/text_heading_1x"
...
