<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ShelfDetailActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnBackShelfDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:src="@drawable/ic_baseline_arrow_back_ios_24" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivShelfAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:src="@drawable/ic_baseline_more_horiz_black_24dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvShelfNamesDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnBackShelfDetail"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:text="10 Interaction Design Books To Read"
        android:textColor="@color/black"
        android:textSize="@dimen/text_heading_1x"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:id="@+id/etShelfNamesDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnBackShelfDetail"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:inputType="textNoSuggestions"
        android:text=""
        android:textColor="@color/black"
        android:textSize="@dimen/text_heading_1x"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNoOfBooksDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvShelfNamesDetail"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:text="3 books" />

    <include
        android:id="@+id/vpShelfDetail"
        layout="@layout/view_pod_library_with_filter_and_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNoOfBooksDetail"
        android:layout_marginTop="@dimen/margin_medium_2" />
</RelativeLayout>