<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.YourShelvesFragment"
    >

   <FrameLayout
       android:visibility="visible"
       android:id="@+id/llBookNoShelf"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

      <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="100dp"
          android:layout_height="100dp"
         android:layout_gravity="center"
         android:src="@drawable/book_placeholder"
          android:layout_marginBottom="80dp"/>

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvNoShelves"
          android:layout_gravity="center"
          android:text="No Shelves Avaliable"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
   </FrameLayout>
   <androidx.recyclerview.widget.RecyclerView
       android:layout_marginStart="@dimen/margin_medium_2"
       android:layout_marginTop="@dimen/margin_medium_2"
       android:elevation="@dimen/margin_medium"
       android:id="@+id/rvShelves"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>

   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/btnCreateNewLibrary"
       android:paddingTop="@dimen/margin_medium_2"
       android:paddingStart="@dimen/margin_medium_2"
       android:paddingEnd="@dimen/margin_medium_2"
       android:paddingBottom="@dimen/margin_medium_2"
       android:textColor="@color/white"
       android:background="@drawable/background_button_new_library"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:drawableStart="@drawable/ic_baseline_edit_white_24p"
       android:drawablePadding="@dimen/margin_medium"
       android:text="Create New Library"
       android:layout_marginBottom="100dp"
       android:layout_gravity="center|bottom"/>

</FrameLayout>