...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddToShelvesActivity">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:id="@+id/btnConfirmAddToShelves"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:tint="@color/black"
        android:src="@drawable/ic_baseline_check_20"
        android:layout_width="@dimen/margin_xlarge"
        android:layout_height="@dimen/margin_xlarge"/>
...
        android:src="@drawable/ic_baseline_close_black_24p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginBottom="@dimen/margin_xxlarge"
        android:id="@+id/tvAddToShelves"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/lbl_add_to_shelves"
        android:textSize="@dimen/material_text_title"/>
...
