...
        android:text="10 Interaction Design Books To Read"
        android:textSize="@dimen/text_regular_3x"

        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRenameShelf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlBookDetail"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_2"
...
        android:gravity="top"
        android:text="Rename Shelf"
        android:textColor="@color/black"
        android:textSize="@dimen/text_regular" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlBookDetail"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_3"
...
