...
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium_2">

            <alirezat775.lib.carouselview.CarouselView
                android:id="@+id/carouselView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="@dimen/margin_medium_2" />

            <com.google.android.material.tabs.TabLayout
...
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2"
                app:tabIndicatorFullWidth="false"
                app:tabTextAppearance="@style/CustomTabText" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvEbooksWithGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tabBooksAndAudio"
                android:layout_marginTop="@dimen/margin_card_medium"
                android:clipToPadding="false" />

...
