<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout
    android:id="@+id/llBookTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="7">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEbooksGenre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:layout_weight="6"
        android:fontFamily="@font/andika"
        android:text="Comic Books"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
        android:layout_weight="1"/>


</LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="@dimen/margin_medium_2"
        android:id="@+id/rvEbooks"
        android:layout_below="@id/llBookTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingStart="@dimen/margin_medium_2"
        android:paddingEnd="@dimen/margin_medium_2" />
</RelativeLayout>
