...
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:drawableEnd="@drawable/ic_baseline_grid_on_24"
        android:drawablePadding="@dimen/margin_card_medium"
        android:text="View: Grid" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLibraryEbooks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSortBy"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium_2" />

...
